# python-game-engine

./: .gitignore  LICENCE  README.md  README.rst  main.py  pyproject.toml
game_menu/: effects.py  game.py  interface.py  scene.py
gamelib/: game.py  scene.py
src/basic_engine/: interface.py  utils.py
src/basic_engine/tests/: game.py  interface.py
src/core/: effects.py  game.py  scene.py  transition.py
src/core/tests/: game.py
