[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_engine"
version = "1.0.0"
authors = [
  { name="De Moura", email="smolBlackCat@proton.me" },
]
description = "A small graphics engine that provides a basic API for using pygame."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= ["pygame"]

[project.urls]
"Homepage" = "https://github.com/smolBlackCat/python-game-engine"
"Bug Tracker" = "https://github.com/smolBlackCat/python-game-engine/issues"